src/test/deca/syntax/invalid/created/random_100_TOKENS.deca
// Description :
// Fichier contenant 100 tokens dont un invalide 
//
// Resultats :
// Lexer -> Error (resultat dans lexer)
// Parser -> Error (resultat dans parser)

RtEzCQWtqNxurM0plns9ZCJPn4hlN3Vpn 

	 
th5$3DSrtR0OF2yv4Gbqbx JDzriXQYj$fvhNw8xVU1Sa9FY7s extends 
21444.52900E-2536621996f * "ï¿½ï¿½ï¿½Sï¿½jï¿½ï¿½\\\\ï¿½"  - 3096172121 JQEpCSJz11XGonaYwVoTI1l2o2aaK83 52418.27485e+3191247811f 
return && || this / "" g_u4FX5DG3XX$DtDjVK16602sfEBtkIKG5gVtNa osARlW8ahac20rXFBjMUSO235kOhNA readInt 
m71R < 
4237416010 print 
		new 	$ "|Yï¿½ï¿½ï¿½Lï¿½1X
ï¿½ï¿½" ! "ï¿½Cï¿½>ï¿½C{+ï¿½ï¿½ï¿½ï¿½ï¿½a`ï¿½qï¿½kï¿½Mï¿½ï¿½[8Þ„Jï¿½" SPXbgVK1teIZR$$eEbo3c520 1676.47655e-3901733459f class extends 
	"b|Ý©!4Yvï¿½>B9ï¿½" 
instanceof hnVDoG$6kP$7B_s2GM4UcuZPEhnJWa4qDMk7 	
} 25226.24709E+4272454843 null 4128997984  extends class 	"	\"Â€ï¿½ï¿½uï¿½ï¿½2ï¿½ï¿½ 	println 60576.58858f 7195.21905e-2059447092f = 
true 	"ï¿½ï¿½%ï¿½E" "|ï¿½2ï¿½ï¿½ï¿½ï¿½MPTï¿½Tï¿½(ï¿½ÃÓ’kï¿½" extends 13218.20736e+967626746f "Þ¤&ï¿½iï¿½ï¿½Zï¿½ï¿½ï¿½ï¿½mï¿½BÉ›ï¿½ï¿½5`ï¿½upï¿½" 

 46230.8178 59152.48646E+3942236041f if 
3346919755 . && null 	GM4jp3IMQc91hjzv7M6qgRufTQy8 fIFzoZa30eyNIqEE 5610.48914e-1305889399f != return 
"ï¿½ï¿½ï¿½>kKï¿½×•ï¿½YlK[ï¿½ï¿½" "P!ï¿½9ï¿½xï¿½)ï¿½Qï¿½_"  1823991226 